"Fix" width so there is no horizontal scrollbar

--- a/css/besogo.css
+++ b/css/besogo.css
@@ -1,3 +1,8 @@
+#main-container {
+    max-width: 99%;
+}
+
+
 .besogo-container {
     outline: none;
     display: flex;
